# peuler-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: deploy.yml  deploy_website.yml  test.yml  test_peuler.yml  test_pmath.yml
0001 - Multiples of 3 or 5/Python/: main.py
0001 - Multiples of 3 or 5/Rust/: main.rs
0002 - Even Fibonacci numbers/: 2 - Even Fibonacci numbers.txt
0002 - Even Fibonacci numbers/Rust/: main.rs
0003 - Largest prime factor/Rust/: main.rs
0004 - Largest palindrome product/Rust/: main.rs
0005 - Smallest multiple/: 5 - Smallest multiple.txt
0007 - 10001st prime/: 7 - 10001st prime.txt
0007 - 10001st prime/Rust/: main.rs
0008 - Largest product in a series/: 8 - Largest product in a series.txt
0008 - Largest product in a series/Rust/: main.rs
0010 - Summation of primes/Rust/: main.rs
0011 - Largest product in a grid/Rust/: main.rs
0012 - Highly divisible triangular number/Rust/: main.rs
0014 - Longest Collatz sequence/Rust/: main.rs
0017 - Number letter counts/Rust/: main.rs
0019 - Counting Sundays/Rust/: main.rs
0020 - Factorial digit sum/: 20 - Factorial digit sum.txt
0021 - Amicable numbers/: 21 - Amicable numbers.txt
0022 - Names scores/: 22 - Names scores.txt
0023 - Non-abundant sums/Rust/: main.rs
0025 - 1000-digit Fibonacci number/Rust/: main.rs
0027 - Quadratic primes/Rust/: main.rs
0035 - Circular primes/Rust/: main.rs
0036 - Double-base palindromes/Rust/: main.rs
0041 - Pandigital prime/Rust/: main.rs
0043 - Sub-string divisibility/Rust/: main.rs
0044 - Pentagon numbers/Rust/: main.rs
0046 - Goldbach's other conjecture/Rust/: main.rs
0047 - Distinct primes factors/Rust/: main.rs
0048 - Self powers/Rust/: main.rs
0050 - Consecutive prime sum/Rust/: main.rs
0053 - Combinatoric selections/Rust/: main.rs
0055 - Lychrel numbers/Rust/: main.rs
0067 - Maximum path sum II/Rust/: main.rs
0081 - Path sum= two ways/Rust/: main.rs
peuler/: Cargo.toml  README.md
peuler/src/: lib.rs  main.rs
peuler/src/problems/: mod.rs
peuler/src/problems/p0001/: mod.rs
peuler/src/problems/p0002/: mod.rs
peuler/src/problems/p0003/: mod.rs
peuler/src/problems/p0004/: mod.rs
peuler/src/problems/p0005/: mod.rs
peuler/src/problems/p0006/: mod.rs
peuler/src/problems/p0007/: mod.rs
peuler/src/problems/p0008/: mod.rs
peuler/src/problems/p0009/: mod.rs
peuler/src/problems/p0010/: mod.rs
peuler/src/problems/p0011/: mod.rs
peuler/src/problems/p0012/: mod.rs
peuler/src/problems/p0013/: mod.rs
peuler/src/problems/p0014/: mod.rs
peuler/src/problems/p0015/: mod.rs
peuler/src/problems/p0016/: mod.rs
peuler/src/problems/p0017/: mod.rs
peuler/src/problems/p0018/: mod.rs
peuler/src/problems/p0019/: mod.rs
peuler/src/problems/p0020/: mod.rs
peuler/src/problems/p0021/: mod.rs
peuler/src/problems/p0022/: mod.rs
peuler/src/problems/p0023/: mod.rs
peuler/src/problems/p0024/: mod.rs
peuler/src/problems/p0025/: mod.rs
peuler/src/problems/p0026/: mod.rs
peuler/src/problems/p0027/: mod.rs
peuler/src/problems/p0028/: mod.rs
peuler/src/problems/p0029/: mod.rs
peuler/src/problems/p0030/: mod.rs
peuler/src/problems/p0031/: mod.rs
peuler/src/problems/p0032/: mod.rs
peuler/src/problems/p0033/: mod.rs
peuler/src/problems/p0034/: mod.rs
peuler/src/problems/p0035/: mod.rs
peuler/src/problems/p0036/: mod.rs
peuler/src/problems/p0037/: mod.rs
peuler/src/problems/p0038/: mod.rs
peuler/src/problems/p0039/: mod.rs
peuler/src/problems/p0040/: mod.rs
peuler/src/problems/p0041/: mod.rs
peuler/src/problems/p0042/: mod.rs
peuler/src/problems/p0043/: mod.rs
peuler/src/problems/p0044/: mod.rs
peuler/src/problems/p0045/: mod.rs
peuler/src/problems/p0046/: mod.rs
peuler/src/problems/p0047/: mod.rs
peuler/src/problems/p0048/: mod.rs
peuler/src/problems/p0049/: mod.rs
peuler/src/problems/p0050/: mod.rs
peuler/src/problems/p0052/: mod.rs
peuler/src/problems/p0053/: mod.rs
peuler/src/problems/p0054/: mod.rs
peuler/src/problems/p0055/: mod.rs
peuler/src/problems/p0056/: mod.rs
peuler/src/problems/p0057/: mod.rs
peuler/src/problems/p0058/: mod.rs
peuler/src/problems/p0059/: mod.rs
peuler/src/problems/p0061/: mod.rs
peuler/src/problems/p0062/: mod.rs
peuler/src/problems/p0063/: mod.rs
peuler/src/problems/p0064/: mod.rs
peuler/src/problems/p0065/: mod.rs
peuler/src/problems/p0066/: mod.rs
peuler/src/problems/p0067/: mod.rs
peuler/src/problems/p0069/: mod.rs
peuler/src/problems/p0070/: mod.rs
peuler/src/problems/p0071/: mod.rs
peuler/src/problems/p0072/: mod.rs
peuler/src/problems/p0073/: mod.rs
peuler/src/problems/p0074/: mod.rs
peuler/src/problems/p0075/: mod.rs
peuler/src/problems/p0076/: mod.rs
peuler/src/problems/p0077/: mod.rs
peuler/src/problems/p0078/: mod.rs
peuler/src/problems/p0080/: mod.rs
peuler/src/problems/p0081/: mod.rs
peuler/src/problems/p0082/: mod.rs
peuler/src/problems/p0085/: mod.rs
peuler/src/problems/p0089/: mod.rs
peuler/src/problems/p0091/: mod.rs
peuler/src/problems/p0092/: mod.rs
peuler/src/problems/p0095/: mod.rs
peuler/src/problems/p0097/: mod.rs
peuler/src/problems/p0098/: mod.rs
peuler/src/problems/p0099/: mod.rs
peuler/src/problems/p0100/: mod.rs
peuler/src/problems/p0102/: mod.rs
peuler/tests/runner/: mod.rs
pmath/: Cargo.toml  README.md
pmath/src/: digits.rs  factors.rs  geometry.rs  lib.rs  linalg.rs  primes.rs  sequences.rs  statistics.rs
pmath/src/probability/: distributions.rs
src/: lib.rs  main.rs
src/math/: digits.rs  factors.rs  linalg.rs  mod.rs  prime.rs  primes.rs  sequence.rs  sequences.rs  statistics.rs
src/problems/: mod.rs
src/shared/: math.rs  mod.rs  numbers.rs  structures.rs
tests/: problems.rs
tests/runner/: mod.rs
website/: index.html
website/scripts/wasm/: Cargo.toml
website/scripts/wasm/src/: lib.rs
(+212 files in other folders)
