[package]
name = "project_euler"
description = "Project Euler solutions in Rust"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true

[profile.test]
opt-level = 3

[dependencies]
clap = { version = "4.5.19", features = ["cargo"] }
itertools = "0.13.0"
malachite = "0.4.14"
num-traits = "0.2.19"
