[package]
name = "peuler"
version = "0.1.0"
authors = ["Antonio Mamić <antoniomamic007@gmail.com>"]
edition = "2024"
description = "A Rust crate with solutions to the Project Euler problems"
readme = "README.md"
repository = "https://github.com/amamic1803/peuler-rs/tree/main/peuler"
license = "MIT"
keywords = ["algorithms", "mathematics", "wasm", "math", "project-euler"]
categories = ["algorithms", "mathematics", "wasm"]

[dependencies]
clap = { version = "4.5.46", features = ["cargo"], optional = true }
itertools = "0.14.0"
malachite = "0.6.1"
pmath = { path = "../pmath", version = "0.1.0" }

[target.wasm32-unknown-unknown.dependencies]
js-sys = "0.3.77"
wasm-bindgen = "0.2.100"
web-sys = { version = "0.3.77", features = ["Performance", "Window"] }

[features]
default = []
cli = ["clap"]

[lib]
name = "peuler"
path = "src/lib.rs"

[[bin]]
name = "peuler"
path = "src/main.rs"
required-features = ["cli"]
