[package]
name = "pmath"
version = "0.2.0"
authors = ["Antonio Mamić <antoniomamic007@gmail.com>"]
edition = "2024"
description = "A general-purpose mathematics crate for Rust"
readme = "README.md"
repository = "https://github.com/amamic1803/peuler-rs/tree/main/pmath"
license = "MIT"
keywords = ["algorithms", "mathematics", "wasm", "math"]
categories = ["algorithms", "mathematics", "wasm"]

[dependencies]
katexit = "0.1.5"
itertools = "0.14.0"
malachite = "0.9.1"
num-traits = "0.2.19"
rand = "0.10.0"

[target.wasm32-unknown-unknown.dependencies]
getrandom = { version = "0.4.1", features = ["wasm_js"] }

[dev-dependencies]
assert_float_eq = "1.2.0"

[lib]
name = "pmath"
path = "src/lib.rs"
